--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -23,3 +23,12 @@ jobs:
     - name: Run pub export
       run: |
         python pub-year-list.py --csv 2021 > bib-2021.csv
+    - name: update the repo
+      run: |
+        git add .
+        git commit -m "Auto update pubs"
+    - name: Push changes 
+      uses: ad-m/github-push-action@master
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        force: true
