--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -20,7 +20,7 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: "3.7"
-    - run: pip3 install pandas
+    - run: pip3 install pandas openpyxl
     - name: Run pub export
       run: |
         python pub-year-list.py --csv 2021 > bib-2021.csv
